...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tmdb_color"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/img_posterTv"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_tvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_posterTv"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_first_air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_first_air">

            <TextView
                android:id="@+id/tv_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white_2"
                android:textSize="16sp"
                tools:text="@string/season_example" />
...
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp" />

            <TextView
                android:id="@+id/tv_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:textColor="@color/white_2"
                android:textSize="16sp"
...
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tagline_tv" />

        <TextView
            android:id="@+id/tv_voteTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:maxLines="2"
...
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_voteTv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenres"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbarSize="0dp"
            app:layout_constraintBottom_toBottomOf="@id/txt_genre"
...
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_genre" />

        <TextView
            android:id="@+id/tv_statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/txt_statusTv"
...
